[gd_scene load_steps=41 format=3 uid="uid://diy7hae64ygie"]

[ext_resource type="PackedScene" uid="uid://c4phshtsyfg0g" path="res://ui/blocks/scenes/main_ui.tscn" id="1_wiq6v"]
[ext_resource type="VideoStream" uid="uid://bkd8jtksenisx" path="res://assets/Farm/River/YTDown.com_YouTube_4K-Animated-cartoon-background-river-lan_Media_Aguo-0hAqfU_001_1080p-_2_.ogv" id="2_e1fgg"]
[ext_resource type="Script" uid="uid://diqwtamcdwq5" path="res://levels/lvl1/RiverLevel/River_Player.gd" id="2_fckal"]
[ext_resource type="Texture2D" uid="uid://di1pm002tjj7q" path="res://assets/Farm/River/River_Level/River_Level.jpg" id="3_0vwdd"]
[ext_resource type="Texture2D" uid="uid://dmm4fdkilh1gh" path="res://assets/Farm/River/River_Level/Rock.png" id="5_e1fgg"]
[ext_resource type="AudioStream" uid="uid://di8swled3gb5b" path="res://sounds/River_Level_Sounds/splash-by-blaukreuz-6261.mp3" id="5_fckal"]
[ext_resource type="Texture2D" uid="uid://g2u1dyukuoam" path="res://assets/Farm/River/River_Level/Butterfly_01.png" id="5_okv6a"]
[ext_resource type="Texture2D" uid="uid://cyji17cbowng6" path="res://levels/lvl1/RiverLevel/Final Girl Sprite 448x448.png" id="5_pyw0y"]
[ext_resource type="Texture2D" uid="uid://dppbgbgaalikf" path="res://levels/lvl1/RiverLevel/Final Boy Sprite 448x448.png" id="6_0s3ts"]
[ext_resource type="Texture2D" uid="uid://buvgrobxohu4k" path="res://assets/Farm/River/River_Level/Butterfly_02.png" id="6_p1icf"]
[ext_resource type="Texture2D" uid="uid://dfmj8fb6yftmp" path="res://assets/Farm/River/River_Level/Butterfly_03.png" id="7_81u7j"]
[ext_resource type="Script" uid="uid://b71g7mpy5b1vn" path="res://levels/lvl1/RiverLevel/win_rock.gd" id="11_b4xwp"]

[sub_resource type="AtlasTexture" id="AtlasTexture_sgxtw"]
atlas = ExtResource("6_0s3ts")
region = Rect2(0, 0, 448, 448)

[sub_resource type="AtlasTexture" id="AtlasTexture_vtoun"]
atlas = ExtResource("6_0s3ts")
region = Rect2(448, 0, 448, 448)

[sub_resource type="AtlasTexture" id="AtlasTexture_fpdaa"]
atlas = ExtResource("6_0s3ts")
region = Rect2(896, 0, 448, 448)

[sub_resource type="AtlasTexture" id="AtlasTexture_sc6su"]
atlas = ExtResource("6_0s3ts")
region = Rect2(1344, 0, 448, 448)

[sub_resource type="AtlasTexture" id="AtlasTexture_ms5j4"]
atlas = ExtResource("6_0s3ts")
region = Rect2(4032, 0, 448, 448)

[sub_resource type="AtlasTexture" id="AtlasTexture_p4qda"]
atlas = ExtResource("6_0s3ts")
region = Rect2(4480, 0, 448, 448)

[sub_resource type="AtlasTexture" id="AtlasTexture_xssn5"]
atlas = ExtResource("6_0s3ts")
region = Rect2(4928, 0, 448, 448)

[sub_resource type="AtlasTexture" id="AtlasTexture_dvwsl"]
atlas = ExtResource("6_0s3ts")
region = Rect2(5376, 0, 448, 448)

[sub_resource type="AtlasTexture" id="AtlasTexture_pyw0y"]
atlas = ExtResource("5_pyw0y")
region = Rect2(0, 0, 448, 448)

[sub_resource type="AtlasTexture" id="AtlasTexture_e1fgg"]
atlas = ExtResource("5_pyw0y")
region = Rect2(448, 0, 448, 448)

[sub_resource type="AtlasTexture" id="AtlasTexture_b4xwp"]
atlas = ExtResource("5_pyw0y")
region = Rect2(896, 0, 448, 448)

[sub_resource type="AtlasTexture" id="AtlasTexture_0s3ts"]
atlas = ExtResource("5_pyw0y")
region = Rect2(1344, 0, 448, 448)

[sub_resource type="AtlasTexture" id="AtlasTexture_h571a"]
atlas = ExtResource("5_pyw0y")
region = Rect2(4032, 0, 448, 448)

[sub_resource type="AtlasTexture" id="AtlasTexture_lxvh5"]
atlas = ExtResource("5_pyw0y")
region = Rect2(4480, 0, 448, 448)

[sub_resource type="AtlasTexture" id="AtlasTexture_ejiex"]
atlas = ExtResource("5_pyw0y")
region = Rect2(4928, 0, 448, 448)

[sub_resource type="AtlasTexture" id="AtlasTexture_gd0w6"]
atlas = ExtResource("5_pyw0y")
region = Rect2(5376, 0, 448, 448)

[sub_resource type="AtlasTexture" id="AtlasTexture_irsya"]
atlas = ExtResource("5_pyw0y")
region = Rect2(5824, 0, 448, 448)

[sub_resource type="SpriteFrames" id="SpriteFrames_sgxtw"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_sgxtw")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_vtoun")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_fpdaa")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_sc6su")
}],
"loop": true,
"name": &"Boy_Idle",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_ms5j4")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_p4qda")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_xssn5")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_dvwsl")
}],
"loop": true,
"name": &"Boy_Jump",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_pyw0y")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_e1fgg")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_b4xwp")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_0s3ts")
}],
"loop": true,
"name": &"Girl_Idle",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_h571a")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_lxvh5")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ejiex")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_gd0w6")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_irsya")
}],
"loop": true,
"name": &"Girl_Jump",
"speed": 5.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_wiq6v"]
size = Vector2(329, 133)

[sub_resource type="SpriteFrames" id="SpriteFrames_m1pdk"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("5_okv6a")
}, {
"duration": 1.0,
"texture": ExtResource("6_p1icf")
}, {
"duration": 1.0,
"texture": ExtResource("7_81u7j")
}],
"loop": true,
"name": &"default",
"speed": 2.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_fckal"]
size = Vector2(125.875, 351)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_0vwdd"]
size = Vector2(302.5, 148)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_pyw0y"]
size = Vector2(159, 136.75)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_e1fgg"]
size = Vector2(328.5, 150.5)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_b4xwp"]
size = Vector2(128.5, 303)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_0s3ts"]
size = Vector2(508, 148)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_uuhoc"]
size = Vector2(138.5, 129)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_h571a"]
size = Vector2(135, 336)

[node name="FarmRiverLevel" type="Node2D"]

[node name="MainUI" parent="." instance=ExtResource("1_wiq6v")]
offset_top = 450.0
offset_right = 800.0
offset_bottom = 450.0

[node name="Action_Button" parent="MainUI/HBoxContainer/FunctionPanel/VBoxContainer/Move_Right" index="0"]
level_bound = 1200
step_size = 200
move_duration = 1.0

[node name="Action_Button" parent="MainUI/HBoxContainer/FunctionPanel/VBoxContainer/Move_Left" index="0"]
level_bound = 100
step_size = 200
move_duration = 1.0

[node name="Action_Button" parent="MainUI/HBoxContainer/FunctionPanel/VBoxContainer/Move_Up" index="0"]
level_bound = 300
step_size = 200
move_duration = 1.0

[node name="Action_Button" parent="MainUI/HBoxContainer/FunctionPanel/VBoxContainer/Move_Down" index="0"]
level_bound = 700
step_size = 200
move_duration = 1.0

[node name="Top_Loop_Block" parent="MainUI/HBoxContainer/FunctionPanel/VBoxContainer" index="4"]
visible = false

[node name="Bottom_Loop_Block" parent="MainUI/HBoxContainer/FunctionPanel/VBoxContainer" index="5"]
visible = false

[node name="SubViewport" parent="MainUI/HBoxContainer/GameArea/SubViewportContainer" index="0"]
audio_listener_enable_2d = true
audio_listener_enable_3d = true

[node name="VideoStreamPlayer" type="VideoStreamPlayer" parent="MainUI/HBoxContainer/GameArea/SubViewportContainer/SubViewport" index="0"]
offset_right = 1200.0
offset_bottom = 900.0
stream = ExtResource("2_e1fgg")
autoplay = true
expand = true

[node name="Sprite2D" type="Sprite2D" parent="MainUI/HBoxContainer/GameArea/SubViewportContainer/SubViewport" index="2"]
visible = false
position = Vector2(738, -327.99994)
scale = Vector2(0.214056, 0.227101)
texture = ExtResource("3_0vwdd")
centered = false

[node name="Player" parent="MainUI/HBoxContainer/GameArea/SubViewportContainer/SubViewport" index="3" groups=["Player"]]
position = Vector2(1138, 590)
script = ExtResource("2_fckal")

[node name="Sprite2D" parent="MainUI/HBoxContainer/GameArea/SubViewportContainer/SubViewport/Player" index="0"]
visible = false

[node name="SplashSoundPlayer" type="AudioStreamPlayer2D" parent="MainUI/HBoxContainer/GameArea/SubViewportContainer/SubViewport/Player" index="2"]
stream = ExtResource("5_fckal")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="MainUI/HBoxContainer/GameArea/SubViewportContainer/SubViewport/Player" index="3"]
scale = Vector2(0.5, 0.5)
sprite_frames = SubResource("SpriteFrames_sgxtw")
animation = &"Boy_Jump"
flip_h = true

[node name="Rock2" type="Area2D" parent="MainUI/HBoxContainer/GameArea/SubViewportContainer/SubViewport" index="4" groups=["Rocks"]]

[node name="CollisionShape2D" type="CollisionShape2D" parent="MainUI/HBoxContainer/GameArea/SubViewportContainer/SubViewport/Rock2"]
position = Vector2(1036.5, 592)
shape = SubResource("RectangleShape2D_wiq6v")

[node name="Sprite2D" type="Sprite2D" parent="MainUI/HBoxContainer/GameArea/SubViewportContainer/SubViewport/Rock2"]
position = Vector2(953, 700)
scale = Vector2(0.218, 0.218)
texture = ExtResource("5_e1fgg")

[node name="Butterfly2" type="Area2D" parent="MainUI/HBoxContainer/GameArea/SubViewportContainer/SubViewport" index="5"]

[node name="Sprite2D" type="AnimatedSprite2D" parent="MainUI/HBoxContainer/GameArea/SubViewportContainer/SubViewport/Butterfly2"]
visible = false
position = Vector2(1043.5, 245.5)
scale = Vector2(0.0830078, 0.0927735)
sprite_frames = SubResource("SpriteFrames_m1pdk")
frame_progress = 0.0422591

[node name="River" type="Area2D" parent="MainUI/HBoxContainer/GameArea/SubViewportContainer/SubViewport" index="6"]

[node name="Butterfly" type="Area2D" parent="MainUI/HBoxContainer/GameArea/SubViewportContainer/SubViewport" index="7"]

[node name="Sprite2D" type="AnimatedSprite2D" parent="MainUI/HBoxContainer/GameArea/SubViewportContainer/SubViewport/Butterfly"]
visible = false
position = Vector2(171.50002, 289)
scale = Vector2(0.12402342, 0.124999985)
sprite_frames = SubResource("SpriteFrames_m1pdk")
frame_progress = 0.850143

[node name="Rock3" type="Area2D" parent="MainUI/HBoxContainer/GameArea/SubViewportContainer/SubViewport" index="8" groups=["Rocks"]]

[node name="CollisionShape2D" type="CollisionShape2D" parent="MainUI/HBoxContainer/GameArea/SubViewportContainer/SubViewport/Rock3"]
position = Vector2(546.9375, 472.5)
shape = SubResource("RectangleShape2D_fckal")

[node name="Sprite2D" type="Sprite2D" parent="MainUI/HBoxContainer/GameArea/SubViewportContainer/SubViewport/Rock3"]
position = Vector2(953.00006, 498)
scale = Vector2(0.218, 0.218)
texture = ExtResource("5_e1fgg")

[node name="Rock4" type="Area2D" parent="MainUI/HBoxContainer/GameArea/SubViewportContainer/SubViewport" index="9" groups=["Rocks"]]

[node name="CollisionShape2D" type="CollisionShape2D" parent="MainUI/HBoxContainer/GameArea/SubViewportContainer/SubViewport/Rock4"]
position = Vector2(843.75, 371)
shape = SubResource("RectangleShape2D_0vwdd")

[node name="Sprite2D" type="Sprite2D" parent="MainUI/HBoxContainer/GameArea/SubViewportContainer/SubViewport/Rock4"]
position = Vector2(757, 498.00003)
scale = Vector2(0.218, 0.218)
texture = ExtResource("5_e1fgg")

[node name="Rock5" type="Area2D" parent="MainUI/HBoxContainer/GameArea/SubViewportContainer/SubViewport" index="10" groups=["Rocks"]]

[node name="CollisionShape2D" type="CollisionShape2D" parent="MainUI/HBoxContainer/GameArea/SubViewportContainer/SubViewport/Rock5"]
position = Vector2(288.5, 569)
shape = SubResource("RectangleShape2D_pyw0y")

[node name="Sprite2D" type="Sprite2D" parent="MainUI/HBoxContainer/GameArea/SubViewportContainer/SubViewport/Rock5"]
position = Vector2(541.00006, 498)
scale = Vector2(0.218, 0.218)
texture = ExtResource("5_e1fgg")

[node name="Rock6" type="Area2D" parent="MainUI/HBoxContainer/GameArea/SubViewportContainer/SubViewport" index="11" groups=["Rocks"]]

[node name="CollisionShape2D" type="CollisionShape2D" parent="MainUI/HBoxContainer/GameArea/SubViewportContainer/SubViewport/Rock6"]
position = Vector2(445.75, 575.75)
shape = SubResource("RectangleShape2D_e1fgg")

[node name="Sprite2D" type="Sprite2D" parent="MainUI/HBoxContainer/GameArea/SubViewportContainer/SubViewport/Rock6"]
position = Vector2(541, 700.00006)
scale = Vector2(0.218, 0.218)
texture = ExtResource("5_e1fgg")

[node name="Rock7" type="Area2D" parent="MainUI/HBoxContainer/GameArea/SubViewportContainer/SubViewport" index="12" groups=["Rocks"]]

[node name="CollisionShape2D" type="CollisionShape2D" parent="MainUI/HBoxContainer/GameArea/SubViewportContainer/SubViewport/Rock7"]
position = Vector2(933, 449.5)
shape = SubResource("RectangleShape2D_b4xwp")

[node name="Sprite2D" type="Sprite2D" parent="MainUI/HBoxContainer/GameArea/SubViewportContainer/SubViewport/Rock7"]
position = Vector2(341, 702.00006)
scale = Vector2(0.218, 0.218)
texture = ExtResource("5_e1fgg")

[node name="Rock8" type="Area2D" parent="MainUI/HBoxContainer/GameArea/SubViewportContainer/SubViewport" index="13" groups=["Rocks"]]

[node name="CollisionShape2D" type="CollisionShape2D" parent="MainUI/HBoxContainer/GameArea/SubViewportContainer/SubViewport/Rock8"]
position = Vector2(738, 370)
shape = SubResource("RectangleShape2D_0s3ts")

[node name="Sprite2D" type="Sprite2D" parent="MainUI/HBoxContainer/GameArea/SubViewportContainer/SubViewport/Rock8"]
position = Vector2(145, 702.00006)
scale = Vector2(0.218, 0.218)
texture = ExtResource("5_e1fgg")

[node name="Rock9" type="Area2D" parent="MainUI/HBoxContainer/GameArea/SubViewportContainer/SubViewport" index="14" groups=["Rocks"]]

[node name="Rock1" type="Area2D" parent="MainUI/HBoxContainer/GameArea/SubViewportContainer/SubViewport" index="15" groups=["Rocks"]]

[node name="CollisionShape2D" type="CollisionShape2D" parent="MainUI/HBoxContainer/GameArea/SubViewportContainer/SubViewport/Rock1"]
position = Vector2(144, 569)
shape = SubResource("RectangleShape2D_uuhoc")

[node name="Sprite2D" type="Sprite2D" parent="MainUI/HBoxContainer/GameArea/SubViewportContainer/SubViewport/Rock1"]
position = Vector2(1138, 702.00006)
scale = Vector2(0.21791662, 0.2195833)
texture = ExtResource("5_e1fgg")

[node name="WinNode" type="Area2D" parent="MainUI/HBoxContainer/GameArea/SubViewportContainer/SubViewport" index="16"]
script = ExtResource("11_b4xwp")

[node name="CollisionShape2D" type="CollisionShape2D" parent="MainUI/HBoxContainer/GameArea/SubViewportContainer/SubViewport/WinNode"]
position = Vector2(143.5, 569)
shape = SubResource("RectangleShape2D_h571a")

[node name="WinScreen" parent="MainUI/HBoxContainer" index="3"]
optimal_blocks = 7

[connection signal="area_exited" from="MainUI/HBoxContainer/GameArea/SubViewportContainer/SubViewport/Player" to="MainUI" method="_on_player_area_exited"]

[editable path="MainUI"]
[editable path="MainUI/HBoxContainer/FunctionPanel/VBoxContainer/Move_Right"]
[editable path="MainUI/HBoxContainer/FunctionPanel/VBoxContainer/Move_Left"]
[editable path="MainUI/HBoxContainer/FunctionPanel/VBoxContainer/Move_Up"]
[editable path="MainUI/HBoxContainer/FunctionPanel/VBoxContainer/Move_Down"]
[editable path="MainUI/HBoxContainer/FunctionPanel/VBoxContainer/Top_Loop_Block"]
[editable path="MainUI/HBoxContainer/FunctionPanel/VBoxContainer/Bottom_Loop_Block"]
[editable path="MainUI/HBoxContainer/GameArea/SubViewportContainer/SubViewport/Player"]
